k8s/service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
        - path: /*
          backend:
              serviceName: memento
              servicePort: 8080
